                                      Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
  - 26-09-2004 fixed: Buttons on subpanel caused issues
  - 26-09-2004 fixed: IMDb lookup could fail if the plot had no html tags in it.
  - 25-09-2004 fixed: <align>right</align> didn't work for buttons
  - 25-09-2004 fixed: [ 1031023 ] Problem with little .wav (like 5 seconds lenght)
                      Caused by tracks being truncated a few secs with HQ resampling on.
  - 25-09-2004 fixed: green videowindow & calibrationscreen after stopping a video
  - 25-09-2004 fixed: flickering subtitles in videowindow & calibrationscreen
  - 25-09-2004 fixed: [ 973403, 1011171 ] flickering 'video playwindow', Windowed video still shaking
  - 25-09-2004 fixed: [ 1031511 ] Playlists with accents in characters will not play
  - 25-09-2004 fixed: [ 1024803 ] Python and Mouse
  - 25-09-2004 fixed: [ 1011940 ] Pause Movie Hangs
  - 25-09-2004 fixed: [ 1034416 ] Difficult to read TTF subtitles
  - 25-09-2004 fixed: [ 1033093 ] Movie Plots which contain HTML tags from IMDB
  - 24-09-2004 fixed: [ 1001048 ] Return to Dashboard broke
  - 24-09-2004 fixed: Graphical glitch when scrolling in thumbs view and another dir is brought up
  - 24-09-2004 added: Album info + Year now shown on the LCD during music playback (based on SF 935576)
  - 24-09-2004 fixed: [ 1034040 ] Pressing x while calibrating screen causes blackscreen
  - 24-09-2004 fixed: Spin controls don't remember which arrow was focused
  - 24-09-2004 fixed: CDDA Player was using too much processor - added Sleep()
  - 24-09-2004 fixed: [ 973399 ] Vizualisations are not in sync with audio
  - 24-09-2004 fixed: [ 991442 ] .cda incorrect numbering